--- a/package.json
+++ b/package.json
@@ -10,23 +10,45 @@
   },
   "dependencies": {
     "@clerk/localizations": "^1.25.2",
-    "@clerk/nextjs": "^4.23.5",
+    "@clerk/nextjs": "^4.26.2",
     "@clerk/themes": "^1.7.5",
+    "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/react-query": "^4.35.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "dayjs": "^1.11.9",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "lucide-react": "^0.274.0",
+    "next": "14.0.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "react-hook-form": "^7.46.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "use-debounce": "^9.0.4",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
-    "eslint": "^8.48.0"
+    "@tailwindcss/forms": "^0.5.6",
+    "eslint": "^8.48.0",
+    "tailwindcss": "^3.3.0"
   }
 }
